# up2-robot

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
devel/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
devel/include/cob_3d_mapping_msgs/: CurvedPolygon.h  CurvedPolygonArray.h  Feature.h  FilterObject.h  GetApproachPoseForPolygonRequest.h  GetApproachPoseForPolygonResponse.h  GetBoundingBoxesRequest.h  GetBoundingBoxesResponse.h  GetGeometryMapRequest.h  GetGeometryMapResponse.h  GetObjectsOfClassRequest.h  GetObjectsOfClassResponse.h  GetPlaneRequest.h  GetPlaneResponse.h  GetPointMapRequest.h  GetPointMapResponse.h  GetTablesRequest.h  GetTablesResponse.h  ModifyMapRequest.h  ModifyMapResponse.h  MoveToTableRequest.h  MoveToTableResponse.h  Plane.h  PlaneExtractionAction.h  PlaneExtractionActionFeedback.h  PlaneExtractionActionGoal.h  PlaneExtractionActionResult.h  PlaneExtractionFeedback.h  PlaneExtractionGoal.h  PlaneExtractionResult.h  PlaneScene.h  Point2D.h  Polygon.h  PolylinePoint.h  SetBoundingBoxesRequest.h  SetBoundingBoxesResponse.h  SetGeometryMapRequest.h  SetGeometryMapResponse.h  SetPointMapRequest.h  SetPointMapResponse.h  (+19 more)
devel/include/cob_object_detection_msgs/: AcquireObjectImageAction.h  AcquireObjectImageActionGoal.h  (+42 more)
src/auto_follow/: CMakeLists.txt
src/auto_follow/src/: follower.cpp  follower1.cpp  port_reader.cpp  port_reader1.cpp
src/navigation/: CMakeLists.txt  package.xml
(+279 files in other folders)
